# netgol

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: publish.yml
config/: regions.toml  server.toml
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml  Dockerfile  Dockerfile.dev
server/src/: auth.rs  claim_store.rs  claims.rs  config.rs  hub.rs  io_task.rs  main.rs  metrics.rs  reaper.rs  region.rs  sim.rs  snapshot.rs  user_store.rs  ws.rs
simulation/: Cargo.toml
simulation/benches/: tick.rs
simulation/src/: chunk.rs  lib.rs  oscillator.rs  wasm.rs  world.rs
web/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: auth_ui.ts  controls_ui.ts  coords.ts  icons.ts  info_ui.ts  links.ts  main.ts  protocol.ts  render.ts  selection.ts  stamp_state.ts  stamp_ui.ts  stamps.ts  subscription.ts  ui.ts  url_sync.ts  viewport.ts  world.ts
web/src/controls/: actions.ts  desktop.ts  index.ts  mobile.ts
