[workspace]
resolver = "2"
members = ["simulation", "protocol", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lajos Bencz <lajos.bencz@gmail.com>"]
repository = "https://github.com/lajosbencz/lazos.me"
rust-version = "1.75"

[workspace.dependencies]
simulation = { path = "simulation" }
protocol = { path = "protocol" }
wasm-bindgen = "0.2"

# server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "fs", "io-util", "signal"] }
bytes = "1"
prometheus = { version = "0.13", default-features = false }
tokio-util = "0.7"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
