[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Authoritative simulation server for lazos.me."

[[bin]]
name = "lazos-server"
path = "src/main.rs"

[dependencies]
simulation.workspace = true
protocol.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
