[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Authoritative simulation server for lazos.me."

[[bin]]
name = "lazos-server"
path = "src/main.rs"

[dependencies]
simulation.workspace = true
protocol.workspace = true
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
prometheus.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
oauth2.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hex.workspace = true
serde_json.workspace = true
time.workspace = true
figment.workspace = true

[dev-dependencies]
tempfile = "3"
