[package]
name = "simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Conway's Game of Life engine. Dual-target: native and wasm32."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen"]
# AVX2 step kernel is selected automatically when the build target includes it
# (e.g. `target-cpu=x86-64-v3` via .cargo/config.toml). Scalar fallback is used
# otherwise. No cargo feature required.

[dependencies]
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "tick"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-simd", "--enable-bulk-memory"]
